# aqa-test-task

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  settings.py
components/navigation/: navbar.py
page_factory/: button.py  link.py  section.py
pages/: effective_mobile_home_page.py
tests/: conftest.py  test_menu_scroll.py
